--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,8 @@
 }
 
 .disqus_contain {
+    display: none;
     position: relative;
-    width: 70%;
     margin: 0px auto;
 }
 
@@ -355,12 +355,30 @@
     padding: .5vw;
 }
 
-.page-number, .newer-posts, .older-posts {
+.page-number {
     font-size: 20px;
+}
+
+.newer-posts, .older-posts {
+    font-size: 18px;
+    color:darkgray;
+}
+
+.newer-posts:hover, .older-posts:hover {
+    font-size: 18px;
+    color:dimgray;
 }
 
 .tags-list {
     columns: 3;
     -webkit-columns: 3;
     -moz-columns: 3;
+}
+
+.comments {
+    font-size: 20px;
+    color: #616161;
+}
+.comments:hover {
+    color: #1980E1;
 }
