--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -3,11 +3,11 @@
 <section>
 	<nav class="pagination" role="navigation">
 		{{#if prev}}
-	        <a class="newer-posts" href="{{page_url prev}}">&larr;</a>
+	        <a class="newer-posts" href="{{page_url prev}}"><i class="fa fa-chevron-left"></i></a>
 	    {{/if}}
 	    <span id="pagination-list" class="page-number"></span>
 	    {{#if next}}
-	    	<a class="older-posts" href="{{page_url next}}">&rarr;</a>
+	    	<a class="older-posts" href="{{page_url next}}"><i class="fa fa-chevron-right"></i></a>
 	    {{/if}}
 	</nav>
 </section>
